[package]
name = "server"
version = "0.1.0"
description = "yet another CubeWorld alpha server"
repository = "https://github.com/LastExceed/berld"
readme = "README.md"
# license = "TODO"
keywords = ["cubeworld"]
categories = ["games"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
boolinator = "2.4.0"
colour = "2.1.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
strum = "0.26.3"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-gateway = { version = "0.15.4", default-features = false, features = ["rustls-webpki-roots"] } #todo: workaround for corrupt certificate cache
tap = "1.0.1"
config = "0.14.1"
dot_vox = "5.1.1"
rand = "0.8.5"
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true