[package]
name = "server"
version = "0.1.0"
description = "yet another CubeWorld alpha server"
repository = "https://github.com/LastExceed/berld"
readme = "README.md"
# license = "TODO"
keywords = ["cubeworld"]
categories = ["games"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
colour = "2.1.0"
tokio = { version = "1.46.0", features = ["full"] }
futures = "0.3.31"
strum = "0.27.1"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
twilight-gateway = { version = "0.16.0" } #todo: workaround for corrupt certificate cache
tap = "1.0.1"
config = "0.15.11"
dot_vox = "5.1.1"
rand = "0.9.1"
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
itertools = "0.14.0"